[package]
name = "codotaku_graphing_calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.27.0"
bevy_egui = "0.30.0"
bevy_panorbit_camera = { version = "0.20.0", features = ["bevy_egui"] }
evalexpr = "12.0.1"
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rayon = "1.10.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
